[package]
name = "goorm_edu_rs_kit"
version = "0.1.0"
edition = "2018"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
repository = "https://github.com/pmnxis/goorm_edu_rs_kit/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"