[package]
name = "goorm_edu_rs_kit"
version = "0.1.1"
edition = "2018"
authors = ["Jinwoo Park <pmnxis@gmail.com>"]
repository = "https://github.com/pmnxis/goorm_edu_rs_kit/"
license = "MIT OR Apache-2.0"
description = "A code test library for easy variable of integer or vector of integer from standard input."
exclude = [
    ".vscode/*",
    ".vscode",
]
keywords = ["codetest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"

